<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_name">手机号/ID</string>
    <string name="login_password">密码</string>
    <string name="login_check">记住密码</string>
    <string name="login_check2">自动登录</string>
    <string name="login_company">版权 山西亲宝贝有限公司</string>
    <string name="register_phone">请输入手机号码</string>
    <string name="register_autocode">请输入验证码</string>
    <string name="register_approve">认证</string>
    <string name="register_existingaccount">已有账号？</string>
    <string name="register_clicktologin">点击登录</string>
    <string name="register_getautocode">短信获取验证码</string>
    <string name="sliding_view1">班级通讯录</string>
    <string name="sliding_view2">宝贝成长历程</string>
    <string name="sliding_view3">请假</string>
    <string name="sliding_view4">幼园直播</string>
    <string name="sliding_view5">云空间管理</string>
    <string name="sliding_view6">健康卡</string>
    <string name="sliding_setting">设置</string>
    <string name="sliding_name">王晓明</string>
    <string name="main_top">新鲜事</string>
    <string name="chat_top">聊天</string>
    <string name="pager4_visitordefault">访问量 ：0</string>
    <string name="pager4_activity">我关注的活动</string>
    <string name="pager1_topbt1">班级</string>
    <string name="pager1_topbt2">校园</string>
    <string name="fragment_leave_top">请假</string>
    <string name="fragment_leave_leavetime">请假时间:</string>
    <string name="fragment_leave_leavetimeto">至:</string>
    <string name="fragment_leave_leavereason">请假原因:</string>
    <string name="fragment_communication_top">通讯录</string>
    <string name="fragment_communication_addfriends">添加好友</string>
    <string name="fragment_communication_addfriends_richscan">扫一扫</string>
    <string name="fragment_health_top">健康卡</string>
    <string name="fragment_health_text1">饮食：</string>
    <string name="fragment_health_text2">运动：</string>
    <string name="fragment_health_text3">休息：</string>
    <string name="fragment_health_text4">饮食：</string>
    <string name="fragment_health_text5">点评：</string>
    <string name="fragment_grow_top">宝贝成长记录</string>
    <string name="pager3_makemoney_top">我要赚钱</string>
    <string name="pager3_makemoney_bottom1">累积收益</string>
    <string name="pager3_makemoney_bottom2">元</string>
    <string name="pager3_makemoney_bottom3">剩余次数</string>
    <string name="pager3_makemoney_bottom4">次</string>
    <string name="pager3_topbt1">东西</string>
    <string name="pager3_topbt2">广告</string>
    <string name="pager3_topbt3">活动</string>


</resources>
