<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/register_button_3_1" />

        <EditText
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_phone" />
        <Button
            android:id="@+id/register_button_1"
            android:text="@string/register_getautocode"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_deep_teal_200"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:hint="@string/register_autocode"/>
            <Button
                android:layout_gravity="end"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@color/material_deep_teal_200"
                android:text="@string/register_approve"/>

            </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_existingaccount"/>
            <TextView
                android:onClick="toLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_clicktologin"
                android:textColor="@color/accent_material_dark"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>