<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <TextView
        android:id="@+id/id_slidingMenu_health_date"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:background="@color/accent_material_light"
        android:gravity="center"
        android:text="今日"
        android:textColor="@color/abc_primary_text_material_dark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_below="@id/id_slidingMenu_health_date"
        android:background="@drawable/sliding_health_frame"
        android:divider="@color/highlighted_text_material_light"
        android:orientation="vertical">

        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/abc_primary_text_material_light"
                android:id="@+id/id_slidingMenu_health_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_health_text1" />

            <RatingBar
                android:id="@+id/id_slidingMenu_health_ratingbar1"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/id_slidingMenu_health_text1"
                android:numStars="5"
                android:rating="1"
                android:stepSize="1" />

            <TextView
                android:textColor="@color/abc_primary_text_material_light"
                android:id="@+id/id_slidingMenu_health_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/id_slidingMenu_health_ratingbar1"
                android:text="@string/fragment_health_text2" />

            <RatingBar
                android:id="@+id/id_slidingMenu_health_ratingbar2"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/id_slidingMenu_health_text2"
                android:numStars="5"
                android:rating="1"
                android:stepSize="1" />
        </RelativeLayout>

        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/abc_primary_text_material_light"
                android:id="@+id/id_slidingMenu_health_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_health_text3" />

            <RatingBar
                android:id="@+id/id_slidingMenu_health_ratingbar3"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/id_slidingMenu_health_text3"
                android:numStars="5"
                android:rating="1"
                android:stepSize="1" />

            <TextView
                android:textColor="@color/abc_primary_text_material_light"
                android:id="@+id/id_slidingMenu_health_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/id_slidingMenu_health_ratingbar3"
                android:text="@string/fragment_health_text4" />

            <RatingBar
                android:id="@+id/id_slidingMenu_health_ratingbar4"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/id_slidingMenu_health_text4"
                android:numStars="5"
                android:rating="1"
                android:stepSize="1" />
        </RelativeLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="20dp"
            android:textColor="@color/abc_primary_text_material_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_health_text5"/>
        <EditText
            android:textColor="@color/abc_primary_text_material_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
