<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_fragment_leave"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_floating_material_light"
    android:visibility="gone"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/link_text_material_dark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/id_fragmentLeaveImage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="slidingmenuLeaveOnClick"
            android:src="@drawable/slidinging_leave_top_1_1" />

        <TextView
            android:id="@+id/id_topTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fragment_leave_top"
            android:textColor="@color/background_material_light"
            android:textSize="20sp" />

        <Button
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/slidinging_leave_top_3_1"
           />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/fragment_leave_leavetime"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:enabled="false"
            android:id="@+id/id_fragmentLeaveEt1"
            android:background="@android:drawable/edit_text"
            android:layout_width="200dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="bottom"/>
        <ImageView
            android:id="@+id/id_fragmentLeaveImage2"
            android:onClick="slidingmenuLeaveOnClick"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/slidinging_leave_data_1_1"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_leave_leavetimeto"/>
        </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:enabled="false"
            android:background="@android:drawable/edit_text"
            android:id="@+id/id_fragmentLeaveEt2"
            android:layout_gravity="bottom"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/id_fragmentLeaveImage3"
            android:onClick="slidingmenuLeaveOnClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/slidinging_leave_data_2_1"/>

        </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/fragment_leave_leavereason"
        android:textSize="20sp" />
    <EditText
        android:background="@android:drawable/edit_text"
        android:singleLine="false"
        android:layout_width="match_parent"
        android:layout_height="150dp" />


</LinearLayout>