<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_fragmentCommunicationAddfriends"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_floating_material_light"
    android:visibility="gone"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/link_text_material_dark"
        android:orientation="horizontal">

        <ImageView
            android:onClick="slidingmenuCommunicationAddfriendsOnClick"
            android:id="@+id/id_slidingMenu_"
            android:src="@drawable/slidinging_leave_top_1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:text="@string/fragment_communication_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:textColor="@color/background_material_light"
          />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/background_material_light"
            android:text="@string/fragment_communication_addfriends"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="20sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       >

    <SearchView
        android:layout_weight="1"
        android:background="@android:drawable/edit_text"
        android:iconifiedByDefault="false"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <Button
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sliding_communication_addfriends_search_1_1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sliding_communication_addfriends_imgv_1_1"/>
        <TextView
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:text="@string/fragment_communication_addfriends_richscan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        </LinearLayout>
</LinearLayout>